--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
 
 @font-face {
@@ -33,6 +35,27 @@ nav div p{
     font-size: 20px;
     font-family: "heebo";
     font-weight: 500;
+}
+
+nav div a{
+    font-size: 20px;
+    font-family: "heebo";
+    font-weight: 500;
+    color: #21243D;
+    transition: 0.6s ;
+}
+
+nav div a:hover{
+    background-color: crimson;
+    padding: 6px 12px;
+    font-size: 24px;
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+}
+
+nav div a:active{
+    background-color: green;
 }
 
 .main-header{
